fix opengraph bug

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:url" content="http://syaifulshahzinan.com/community/annoying-chatbot/" />
     <meta property="og:site_name" content="Malaysia Wordpress Developer, Graphic Web Designer, Opencart, Custom CMS Theme Development" />
     <meta property="og:type" content="product" />
-    <meta property="og:image" content="screenshot.png" />
+    <meta property="og:image" content="http://syaifulshahzinan.com/community/annoying-chatbot/screenshot.png" />
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="icon.png">
     <link rel="apple-touch-icon-precomposed" href="icon.png">
     <link rel="shortcut icon" href="icon.png">
